[package]
name = "ty-helper-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ty-helper-cli"
path = "src/main.rs"

[dependencies]
inquire = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "3.1"
mysql = "*"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1